# claude-cursor-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  README.zh-CN.md  SECURITY.md  flake.nix  install.sh  package.json
.github/workflows/: ci.yml  release.yml
claudedocs/: cursor-cli-reverse-2026-07.md  cursor-proxy-gap-audit-2026-07.md  usage-ctx-and-parity-audit-2026-07-20.md
src/: auth.rs  config.rs  lib.rs  main.rs  monitor.rs  paths.rs  registry.rs  server.rs  session.rs  sse.ts  tui.rs
src/monitor/: mock.rs
src/providers/: translate_shared.rs
src/providers/codex/: client.rs  client.ts  count_tokens.rs  index.ts  mod.rs  request_summary.rs  websocket.rs
src/providers/codex/auth/: constants.rs  manager.rs  pkce.rs  token_store.rs
src/providers/codex/translate/: accumulate.rs  live_stream.rs  mod.rs  model_allowlist.rs  reasoning_signature.rs  reducer.rs  reducer.test.ts  reducer.ts  request.rs  request.test.ts  request.ts  stream.rs  stream.test.ts  stream.ts
src/providers/cursor/: auth.rs  client.rs  connect.rs  conversation.rs  exec_results.rs  hosted_web_search.rs  http1.rs  identity.rs  live.rs  mod.rs  model.rs  native_tools.rs  proto.rs  request.rs  response.rs  sse.rs  test_frames.rs  tool_bridge.rs
src/providers/grok/: mod.rs
src/providers/grok/translate/: accumulate.rs  request.rs  stream.rs
src/providers/kimi/: client.rs  count_tokens.rs  mod.rs
src/providers/kimi/auth/: login.rs  manager.rs
src/providers/kimi/translate/: accumulate.rs  reducer.rs  request.rs  request.ts
tests/: cli.rs  codex_auth.rs  cursor_native.rs  foundation.rs  server.rs  smoke_cutover.rs
