[package]
name = "claude-cursor-proxy"
version = "0.1.24"
description = "Local Anthropic-compatible proxy so Claude Code can use Cursor (Fable 5) and other providers"
edition = "2024"
rust-version = "1.85"
authors = ["YeautyYE", "claude-cursor-proxy contributors"]
license = "MIT"
publish = false
repository = "https://github.com/YeautyYE/claude-cursor-proxy"
homepage = "https://github.com/YeautyYE/claude-cursor-proxy"
readme = "README.md"
keywords = ["claude-code", "cursor", "proxy", "anthropic", "fable"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time", "fs"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
# socks: honor ALL_PROXY=socks5h://...
# macos-system-configuration: pick up macOS System Proxy (Clash/Surge) even
# when launchd/shell did not export HTTP_PROXY — critical for Cursor region.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking", "http2", "socks", "macos-system-configuration"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hostname = "0.4"
once_cell = "1.20"
regex-lite = "0.1"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = "2"
prost = "0.13"
flate2 = "1.0"
ratatui = "0.29"
crossterm = "0.28"
jiff = { version = "0.2", default-features = false, features = ["std", "tz-system", "tzdb-zoneinfo"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2"
predicates = "3"
hex = "0.4"
